--- a/views/index.ejs
+++ b/views/index.ejs
@@ -1,5 +1,4 @@
-
-
+    <%- include("./includes/header.ejs") %>
     <!-- Main -->
     <main class="overflow-hidden main-border">
 
@@ -773,3 +772,4 @@
         <!-- End Contact Us -->
     </main>
     <!-- End Main -->
+    <%- include("./includes/footer.ejs") %>
