--- a/public/css/media-queries.css
+++ b/public/css/media-queries.css
@@ -3,10 +3,6 @@
         background: linear-gradient(rgba(0, 0, 0, 0.25), rgba(0, 0, 0, 0.25)), url('../images/set-pecan-pistachios-almond-peanut-cashew-pine-nuts-lined-up-assorted-nuts-dried-fruits-mini-different-bowls.jpg') center/cover no-repeat;
         height: 100vh;
     }
-    .other-page-hero {
-        background: linear-gradient(rgba(0, 0, 0, 0.25), rgba(0, 0, 0, 0.25)), url('../images/set-pecan-pistachios-almond-peanut-cashew-pine-nuts-lined-up-assorted-nuts-dried-fruits-mini-different-bowls.jpg') center/cover no-repeat;
-        height: 30vh;
-    }
 
     .header-content {
         margin-top: 10px;
@@ -20,13 +16,10 @@
 
 @media (min-width: 576px) {
     .hero {
-        background: linear-gradient(rgba(0, 0, 0, 0.25), rgba(0, 0, 0, 0.25)), url('../images/assorted-nuts-background.jpg') center/cover no-repeat;
+        background: linear-gradient(rgba(0, 0, 0, 0.25), rgba(0, 0, 0, 0.25)), url('../images/set-pecan-pistachios-almond-peanut-cashew-pine-nuts-lined-up-assorted-nuts-dried-fruits-mini-different-bowls.jpg') center/cover no-repeat;
         height: 100vh;
     }
-    .other-page-hero {
-        background: linear-gradient(rgba(0, 0, 0, 0.25), rgba(0, 0, 0, 0.25)), url('../images/assorted-nuts-background.jpg') center/cover no-repeat;
-        height: 30vh;
-    }
+    
 
     .header-content {
         margin-top: 10px;
@@ -56,13 +49,8 @@
 /* Medium devices (tablets, 768px and up) */
 @media (min-width: 768px) { 
     .hero {
-        background: linear-gradient(rgba(0, 0, 0, 0.25), rgba(2, 2, 2, 0.25)), url('../images/assorted-nuts-background.jpg') center/cover no-repeat;
+        background: linear-gradient(rgba(0, 0, 0, 0.25), rgba(2, 2, 2, 0.25)), url('../images/set-pecan-pistachios-almond-peanut-cashew-pine-nuts-lined-up-assorted-nuts-dried-fruits-mini-different-bowls.jpg') center/cover no-repeat;
         height: 100vh;
-    }
-    
-    .other-page-hero {
-        background: linear-gradient(rgba(0, 0, 0, 0.25), rgba(2, 2, 2, 0.25)), url('../images/assorted-nuts-background.jpg') center/cover no-repeat;
-        height: 30vh;
     }
 
     .lg-md-navbar {
@@ -73,7 +61,7 @@
         margin-top: 10px;
     }
     .shopingCard {
-        top: -80px!important;
+        top: -50px!important;
     }
 
     .space-title {
@@ -130,18 +118,15 @@
         height: 100vh;
         z-index: -55;
     }
-    .other-page-hero {
-        background: linear-gradient(rgba(0, 0, 0, 0.25), rgba(0, 0, 0, 0.25)), url('../images/assorted-nuts-background.jpg') center/cover no-repeat;
-        height: 30vh;
-        z-index: -55;
-    }
-
+    
     .lg-md-navbar {
         width: 1000px !important;
     }
 
     .nav-background {
-        width: 1200px !important;
+        width: 980px !important;
+        margin: 0 auto;
+        left: 0;
     }
 
     .header-content {
@@ -152,7 +137,7 @@
         padding: 110px 70px;
     }
     .shopingCard {
-        top: -80px!important;
+        top: -50px!important;
     }
     .search-box-input{
         top: 0!important;
