--- a/views/adminLogin.ejs
+++ b/views/adminLogin.ejs
@@ -5,7 +5,7 @@
             <div class="signin-content">
                 <div class="signin-image">
                     <figure><img src="/images/signin-image.jpg" alt="sing up image"></figure>
-                    <a href="#" class="signup-image-link">درخواست عضویت</a>
+                    <a href="/admin/signup" class="signup-image-link">درخواست عضویت</a>
                 </div>
 
                 <div class="signin-form">
