--- a/views/adminSignup.ejs
+++ b/views/adminSignup.ejs
@@ -34,7 +34,7 @@
                     </div>
                     <div class="signup-image">
                         <figure><img src="/images/signup-image.jpg" alt="sing up image"></figure>
-                        <a href="#" class="signup-image-link">من عضور مدیران سایت هستم</a>
+                        <a href="/admin/login" class="signup-image-link">من عضور مدیران سایت هستم</a>
                     </div>
                 </div>
             </div>
