--- a/views/login.ejs
+++ b/views/login.ejs
@@ -11,8 +11,8 @@
 			<div class="signup">
 				<form>
 					<label for="chk" aria-hidden="true"> ورود </label>
-					<input type="email" name="email" placeholder="ایمیل" required="">
-					<input type="password" name="pswd" placeholder="رمز ورود" required="">
+					<input type="email" name="userEmail" placeholder="ایمیل" required="">
+					<input type="password" name="userPass" placeholder="رمز ورود" required="">
 					<button class="bardia-font">ورود</button>
 				</form>
 			</div>
@@ -22,7 +22,8 @@
 					<label for="chk" aria-hidden="true">ثبت نام</label>
 					<input type="text" name="txt" placeholder="نام کاربری" required>
 					<input type="email" name="email" placeholder="ایمیل" required>
-					<input type="password" name="pswd" placeholder="رمز ورود" required>
+					<input type="password" name="userPass" placeholder="رمز ورود" required>
+					<input type="password" name="userRepass" placeholder="تکرار رمز ورود" required>
 					<button class="bardia-font">ثبت نام</button>
 				</form>
 			</div>
