--- a/views/login.ejs
+++ b/views/login.ejs
@@ -9,22 +9,22 @@
 		<input type="checkbox" id="chk" aria-hidden="true">
 
 			<div class="signup">
-				<form>
+				<form method="POST" action="/user/login2">
 					<label for="chk" aria-hidden="true"> ورود </label>
 					<input type="email" name="userEmail" placeholder="ایمیل" required="">
 					<input type="password" name="userPass" placeholder="رمز ورود" required="">
-					<button class="bardia-font">ورود</button>
+					<button type="submit" class="bardia-font">ورود</button>
 				</form>
 			</div>
 				<!-- نام گزاری کلاس ورود و ثبت نام جابه جا شده -->
 			<div class="login">  
-				<form>
+				<form method="POST" action="/user/login">
 					<label for="chk" aria-hidden="true">ثبت نام</label>
-					<input type="text" name="txt" placeholder="نام کاربری" required>
-					<input type="email" name="email" placeholder="ایمیل" required>
+					<input type="text" name="userName" placeholder="نام کاربری" required>
+					<input type="email" name="userEmail" placeholder="ایمیل" required>
 					<input type="password" name="userPass" placeholder="رمز ورود" required>
 					<input type="password" name="userRepass" placeholder="تکرار رمز ورود" required>
-					<button class="bardia-font">ثبت نام</button>
+					<button type="submit" class="bardia-font">ثبت نام</button>
 				</form>
 			</div>
 	</div>
