--- a/views/adminLogin.ejs
+++ b/views/adminLogin.ejs
@@ -1,6 +1,6 @@
 <div id="main">
     <!-- login  Form -->
-    <section class="sign-in">
+    <section class="sign-in" dir="rtl">
         <div id="container">
             <div class="signin-content">
                 <div class="signin-image">
