--- a/public/css/404.css
+++ b/public/css/404.css
@@ -53,7 +53,7 @@ DRIBBBLE: https://dribbble.com/shots/4330167-404-Page-Lost-In-Space
 }
 
 .bg-purple{
-    background: url(http://salehriaz.com/404Page/img/bg_purple.png);
+    background:  url('../images/bg_purple.png') center/cover no-repeat;
     background-repeat: repeat-x;
     background-size: cover;
     background-position: left top;
