--- a/views/layouts/mainLayout.ejs
+++ b/views/layouts/mainLayout.ejs
@@ -2,16 +2,16 @@
 <html lang="en">
 
 <head>
-    
+
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title><%- pageTitle %></title>
-    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/swiper@8/swiper-bundle.min.css" />
     <link rel="stylesheet" href="/css/bootstrap/bootstrap.min.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css"
         integrity="sha512-iecdLmaskl7CVkqkXNQ/ZH/XLlvWZOJyj7Yy7tcenmpD1ypASozpmT/E0iPtmFIB46ZmdtAc9eNBvH0H/ZpiBw=="
         crossorigin="anonymous" referrerpolicy="no-referrer" />
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/swiper@8/swiper-bundle.min.css" />
     <link rel="stylesheet" href="/css/animate.min.css">
     <link rel="stylesheet" href="/css/grid.css">
     <link rel="stylesheet" href="/css/style.css">
@@ -19,12 +19,13 @@
     <link rel="stylesheet" href="/css/aos.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <% if (path === "/admin" || path === "/404") { %>
-        <link rel="stylesheet" href="/css/adminLoginSignUp.css">
-        <link rel="stylesheet" href="/fonts/material-icon/css/material-design-iconic-font.min.css">
-        <link rel="stylesheet" href="/css/bootstrap.css">
-        <script src="https://www.google.com/recaptcha/api.js?hl=fa" async defer></script>
+    <link rel="stylesheet" href="/css/adminLoginSignUp.css">
+    <link rel="stylesheet" href="/css/404.css">
+    <link rel="stylesheet" href="/fonts/material-icon/css/material-design-iconic-font.min.css">
+    <link rel="stylesheet" href="/css/bootstrap.css">
+    <script src="https://www.google.com/recaptcha/api.js?hl=fa" async defer></script>
     <% } %>
-    
+
 
 </head>
 
@@ -39,7 +40,7 @@
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.5.3/dist/js/bootstrap.bundle.min.js"
         integrity="sha384-ho+j7jyWK8fNQe+A12Hb8AhRq26LrZ/JpcUGGOn+Y7RsweNrtN/tE3MoK7ZeZDyx" crossorigin="anonymous">
     </script>
-    <script src="/cdn.jsdelivr.net/npm/swiper@8/swiper-bundle.min.js"></script>
+    <script src="https://cdn.jsdelivr.net/npm/swiper@8/swiper-bundle.min.js"></script>
     <script src="/js/jquery-3.5.1.min.js"></script>
     <script src="/js/popper.js"></script>
     <script src="/js/aos.js"></script>
