--- a/views/login.ejs
+++ b/views/login.ejs
@@ -1,4 +1,3 @@
-
 <div id="#body" class="m-auto login-section">
 	<div class="hero-logo d-none d-lg-block">
 		<a href="">
@@ -6,6 +5,7 @@
 		</a>
 	</div>
 	<div class="main bardia-font m-auto">  	
+		<%- include("./includes/validationError.ejs") %>
 		<input type="checkbox" id="chk" aria-hidden="true">
 
 			<div class="signup">
