user & admin signup (save to db)

--- a/views/login.ejs
+++ b/views/login.ejs
@@ -11,8 +11,8 @@
 			<div class="signup">
 				<form method="POST" action="/user/login2">
 					<label for="chk" aria-hidden="true"> ورود </label>
-					<input type="email" name="userEmail" placeholder="ایمیل" required="">
-					<input type="password" name="userPass" placeholder="رمز ورود" required="">
+					<input type="email" name="loginUserEmail" placeholder="ایمیل" required="">
+					<input type="password" name="loginUserPass" placeholder="رمز ورود" required="">
 					<button type="submit" class="bardia-font">ورود</button>
 				</form>
 			</div>
