hash password & flash message

--- a/views/adminLogin.ejs
+++ b/views/adminLogin.ejs
@@ -1,6 +1,7 @@
 <div id="main">
     <!-- login  Form -->
     <section class="sign-in" dir="rtl">
+        <%- include("./includes/loginMessage.ejs") %>
         <div id="container">
             <div class="signin-content">
                 <div class="signin-image">
