--- a/views/login.ejs
+++ b/views/login.ejs
@@ -6,6 +6,7 @@
 	</div>
 	<div class="main bardia-font m-auto">  	
 		<%- include("./includes/validationError.ejs") %>
+		<%- include("./includes/loginMessage.ejs") %>
 		<input type="checkbox" id="chk" aria-hidden="true">
 
 			<div class="signup">
