--- a/views/layouts/mainLayout.ejs
+++ b/views/layouts/mainLayout.ejs
@@ -25,6 +25,11 @@
     <link rel="stylesheet" href="/css/bootstrap.css">
     <script src="https://www.google.com/recaptcha/api.js?hl=fa" async defer></script>
     <% } %>
+    <% if (path === "/userprofile") { %>
+    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.4/css/bootstrap.min.css">
+    <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.4/js/bootstrap.min.js"></script>
+    <link rel="stylesheet" href="/css/userProfile.css">
+    <% } %>
 
 
 </head>
