--- a/views/includes/loginMessage.ejs
+++ b/views/includes/loginMessage.ejs
@@ -14,4 +14,20 @@
 <% } %> 
 
 
+<% if(error.length > 0 ) {%>
+
+    <div class="d-flex justify-content-between alert alert-warning alert-dismissible fade show">
+        <div class=" fs-4" role="alert">
+            <%= error %>
+        </div>
+        <div class="d-flex justify-content-start">
+            <a type="button" class="close text-decoration-none fs-4" data-dismiss="alert" aria-label="Close">
+                <span aria-hidden="true">&times;</span>
+            </a>
+        </div>
+    </div>
+
+<% } %> 
+
+
 
