--- a/views/login.ejs
+++ b/views/login.ejs
@@ -10,16 +10,16 @@
 		<input type="checkbox" id="chk" aria-hidden="true">
 
 			<div class="signup">
-				<form method="POST" action="/user/login2">
+				<form method="POST" action="/user/login">
 					<label for="chk" aria-hidden="true"> ورود </label>
-					<input type="email" name="loginUserEmail" placeholder="ایمیل" required="">
-					<input type="password" name="loginUserPass" placeholder="رمز ورود" required="">
+					<input type="email" name="userEmail" placeholder="ایمیل" required="">
+					<input type="password" name="userPass" placeholder="رمز ورود" required="">
 					<button type="submit" class="bardia-font">ورود</button>
 				</form>
 			</div>
 				<!-- نام گزاری کلاس ورود و ثبت نام جابه جا شده -->
 			<div class="login">  
-				<form method="POST" action="/user/login">
+				<form method="POST" action="/user/signup">
 					<label for="chk" aria-hidden="true">ثبت نام</label>
 					<input type="text" name="userName" placeholder="نام کاربری" required>
 					<input type="email" name="userEmail" placeholder="ایمیل" required>
