--- a/views/userProfile.ejs
+++ b/views/userProfile.ejs
@@ -6,8 +6,8 @@
                     <a href="#">
                         <img src="https://bootdey.com/img/Content/avatar/avatar3.png" alt="">
                     </a>
-                    <h1>Camila Smith</h1>
-                    <p>deydey@theEmail.com</p>
+                    <h1><%= userName %></h1>
+                    <p><%= userEmail %></p>
                 </div>
 
                 <ul class="nav nav-pills nav-stacked" dir="ltr">
@@ -38,6 +38,9 @@
                         </li>
                         <li>
                             <a href="#"><i class="fa fa-microphone"></i></a>
+                        </li>
+                        <li >
+                            <a href="/user/logout"><i class="fa fa-sign-out "  title="خروج"></i></a>
                         </li>
                     </ul>
                 </footer>
