--- a/views/adminLogin.ejs
+++ b/views/adminLogin.ejs
@@ -22,7 +22,7 @@
                             <input type="password" name="adminPass" id="your_pass" placeholder="رمز عبور" />
                         </div>
                         <div class="form-group">
-                            <input type="checkbox" name="remember-me" id="remember-me" class="agree-term" />
+                            <input type="checkbox" name="rememberAdmin" id="remember-me" class="agree-term" />
                             <label for="remember-me" class="label-agree-term"><span><span></span></span>مرا
                                 به خاطر بسپار</label>
                         </div>
