--- a/views/layouts/dashLayout.ejs
+++ b/views/layouts/dashLayout.ejs
@@ -280,7 +280,7 @@
                     <span class="ml-3 ml-md-5 position-relative">
                         <span id="header-profile-toggle" class="pointer">
                             <img class="header-avatar" src="images/avatar-2.jpg" alt="">
-                            <span class="header-username"></span>
+                            <span class="header-username"><%= adminName %></span>
                             <i class="fas fa-angle-down"></i>
                         </span>
                         <section id="header-profile" class="header-profile rounded">
@@ -297,7 +297,7 @@
                                 <a href="#" class="list-group-item list-group-item-action header-profile-link">
                                     <i class="fas fa-lock"></i>قفل صفحه
                                 </a>
-                                <a href="/users/logout"
+                                <a href="/dashboard/logout"
                                     class="list-group-item list-group-item-action header-profile-link">
                                     <i class="fas fa-sign-out-alt"></i>خروج
                                 </a>
