--- a/views/includes/footer.ejs
+++ b/views/includes/footer.ejs
@@ -16,7 +16,8 @@
 
                     <li class="pb-3">
                         <i class="fa fa-envelope  ms-3 text-warning"></i>
-                        <a href="mailto:rahmanxrf@gmail.com" class="mb-3 text-warning text-decoration-none">Rahmanxrf@gmail.com
+                        <a href="mailto:rahmanxrf@gmail.com"
+                            class="mb-3 text-warning text-decoration-none">Rahmanxrf@gmail.com
                         </a>
                     </li>
                 </ul>
@@ -29,7 +30,7 @@
                     </i>
                 </span>
                 <!-- news -->
-                <a href="404.html"  class="newsSection text-decoration-none row">
+                <a href="/404" class="newsSection text-decoration-none row">
                     <div class=" col-4 me-3">
                         <img class="newsImage" src="/images/top-view-nuts-white-table.jpg" alt="">
                     </div>
@@ -38,10 +39,10 @@
                         <p class="fs-6 mt-3 ">24 اردیبهشت 1402 <span> </span></p>
                     </div>
                 </a>
-                <a href="404.html" class="newsSection text-decoration-none mt-3 row">
+                <a href="/404" class="newsSection text-decoration-none mt-3 row">
                     <div class=" col-4 me-3">
-                        <img class="newsImage"
-                            src="/images/nuts-and-peanuts-clipart-desing-illustration-free-png.webp" alt="">
+                        <img class="newsImage" src="/images/nuts-and-peanuts-clipart-desing-illustration-free-png.webp"
+                            alt="">
                     </div>
                     <div class="newsText col-7">
                         <p class="fs-5 ">بادام زمینی و خواس بی نظیر آن</p>
@@ -90,27 +91,33 @@
                 </span>
                 <div class="row">
 
-                    <a href="https://www.instagram.com/p/CyjB2iSIvB5/?utm_source=ig_web_copy_link&igshid=MzRlODBiNWFlZA==" class="col-4 my-2 instagram-footer-app">
+                    <a href="https://www.instagram.com/p/CyjB2iSIvB5/?utm_source=ig_web_copy_link&igshid=MzRlODBiNWFlZA=="
+                        class="col-4 my-2 instagram-footer-app">
                         <img src="/images/insta-almonds.jpg" class="instagram-img" alt="">
                     </a>
 
-                    <a href="https://www.instagram.com/p/CphUW3QuvZt/?utm_source=ig_web_copy_link&igshid=MzRlODBiNWFlZA==" class="col-4 my-2 instagram-footer-app">
+                    <a href="https://www.instagram.com/p/CphUW3QuvZt/?utm_source=ig_web_copy_link&igshid=MzRlODBiNWFlZA=="
+                        class="col-4 my-2 instagram-footer-app">
                         <img src="/images/insta-mixedNuts.jpg" class="instagram-img" alt="">
                     </a>
 
-                    <a href="https://www.instagram.com/p/CyAmhHdILgX/?utm_source=ig_web_copy_link&igshid=MzRlODBiNWFlZA==" class="col-4 my-2 instagram-footer-app">
+                    <a href="https://www.instagram.com/p/CyAmhHdILgX/?utm_source=ig_web_copy_link&igshid=MzRlODBiNWFlZA=="
+                        class="col-4 my-2 instagram-footer-app">
                         <img src="/images/insta-peanuts.jpg" class="instagram-img" alt="">
                     </a>
 
-                    <a href="https://www.instagram.com/p/Cw9or1OoH9n/?utm_source=ig_web_copy_link&igshid=MzRlODBiNWFlZA==" class="col-4 my-2 instagram-footer-app">
+                    <a href="https://www.instagram.com/p/Cw9or1OoH9n/?utm_source=ig_web_copy_link&igshid=MzRlODBiNWFlZA=="
+                        class="col-4 my-2 instagram-footer-app">
                         <img src="/images/insta-pistachio.jpg" class="instagram-img" alt="">
                     </a>
 
-                    <a href="https://www.instagram.com/p/CxDwoYJo7Ea/?utm_source=ig_web_copy_link&igshid=MzRlODBiNWFlZA==" class="col-4 my-2 instagram-footer-app">
+                    <a href="https://www.instagram.com/p/CxDwoYJo7Ea/?utm_source=ig_web_copy_link&igshid=MzRlODBiNWFlZA=="
+                        class="col-4 my-2 instagram-footer-app">
                         <img src="/images/insta-pistachiBaked.jpg" class="instagram-img" alt="">
                     </a>
 
-                    <a href="https://www.instagram.com/p/CyQEpTpIahZ/?utm_source=ig_web_copy_link&igshid=MzRlODBiNWFlZA==" class="col-4 my-2 instagram-footer-app">
+                    <a href="https://www.instagram.com/p/CyQEpTpIahZ/?utm_source=ig_web_copy_link&igshid=MzRlODBiNWFlZA=="
+                        class="col-4 my-2 instagram-footer-app">
                         <img src="/images/insta-walnuts.jpg" class="instagram-img" alt="">
                     </a>
 
@@ -119,18 +126,22 @@
                 <p class="text-white m-4 fs-4">همراه ما باشید!</p>
                 <div class="d-flex ">
                     <div class="m-2">
-                        <a href="https://t.me/I_love_karbala" class="footer-social-media-link "><i class="fab fa-telegram "></i>
+                        <a href="https://t.me/I_love_karbala" class="footer-social-media-link "><i
+                                class="fab fa-telegram "></i>
                         </a>
                     </div>
                     <div class="m-2">
-                        <a href="https://instagram.com/khoshkbar_reza98?igshid=OGQ5ZDc2ODk2ZA==" class="footer-social-media-link "><i class="fab fa-instagram "></i>
+                        <a href="https://instagram.com/khoshkbar_reza98?igshid=OGQ5ZDc2ODk2ZA=="
+                            class="footer-social-media-link "><i class="fab fa-instagram "></i>
                         </a>
                     </div>
                     <div class="m-2">
-                        <a href="https://wa.me/qr/C6QOYJ6N6XYGM1" class="footer-social-media-link "><i class="fab fa-whatsapp m-1"></i></a>
+                        <a href="https://wa.me/qr/C6QOYJ6N6XYGM1" class="footer-social-media-link "><i
+                                class="fab fa-whatsapp m-1"></i></a>
                     </div>
                     <div class="m-2">
-                        <a href="mailto:rahmanxrf@gmail.com" class="footer-social-media-link "><i class="fa fa-envelope "></i>
+                        <a href="mailto:rahmanxrf@gmail.com" class="footer-social-media-link "><i
+                                class="fa fa-envelope "></i>
                         </a>
                     </div>
                 </div>
@@ -141,4 +152,13 @@
     </div>
 </footer>
 <!-- End Footer -->
+<% if (path === "/product") { %>
 
+    <script src="https://cdn.jsdelivr.net/npm/swiper@8/swiper-bundle.min.js"></script>
+    <script src="js/jquery-3.5.1.min.js"></script>
+    <script src="js/popper.js"></script>
+    <script src="js/aos.js"></script>
+    <script src="js/bootstarp/bootstrap.min.js"></script>
+    <script src="js/main.js"></script>
+    <script src="js/grid.js"></script>
+    <% } %>
