auth admin & user with google recaptcha

--- a/public/css/grid.css
+++ b/public/css/grid.css
@@ -771,7 +771,7 @@
     /* filter: blur(50px); */
     transition: .2s;
     z-index: 999999999999990999999999999999999999;
-    color: white;
+    color: rgb(2, 3, 0);
 }
 
 
@@ -2074,12 +2074,13 @@ input {
     background: #ffffff;
     justify-content: center;
     display: flex;
-    margin: 20px auto;
-    padding: 10px;
+    margin: 10px auto;
+    padding: 20px;
     border: none;
     outline: none;
     border-radius: 5px;
 }
+
 .rememberUser{
     width: 15px!important;
     height: 15px!important;
@@ -2134,22 +2135,24 @@ button:hover {
     transform: scale(.6);
 }
 
+#recaptcha-container {
+    width: 300px; /* اندازه دلخواه */
+    height: 80px; /* اندازه دلخواه */
+  }
+
 /* -----------------------------       other page       ----------------------- */
 
 .other-page-navbar__links {
     color: rgb(4, 4, 4) !important;
     opacity: .6;
-    transition: .5s;
+    transition: .3s;
     font-weight: 400;
 }
 
 .other-page-navbar__links:hover {
-    transition: .5s;
-    color: rgb(175, 175, 175) !important;
     opacity: 1;
     transform: translateX(-5px) !important;
 }
-
 /* -----------------------------       search-result       ----------------------- */
 
 .product-card-logo {
