--- a/views/login.ejs
+++ b/views/login.ejs
@@ -18,6 +18,7 @@
 					<input type="checkbox" name="rememberUser" id="remember-me" class="rememberUser" />
 					<label for="remember-me" class="fs-6 m-0 text-black-50">منو یادت باشه</label>
 				</div>
+				<div class="g-recaptcha mx-auto " id="recaptcha-container" data-sitekey="6Ldx6w0pAAAAAOEzCLgVKjkrXHkDgIrgzEX719KO"></div>
 				<button type="submit" class="bardia-font">ورود</button>
 			</form>
 		</div>
@@ -34,4 +35,4 @@
 		</div>
 	</div>
 </div>
-<script src="https://www.google.com/recaptcha/enterprise.js?render=6Lck0EQoAAAAAEALb2IwoKvvARjBRANhilCUAc36"></script>
+<script src="https://www.google.com/recaptcha/api.js?hl=fa" async defer></script>
