--- a/views/adminLogin.ejs
+++ b/views/adminLogin.ejs
@@ -26,6 +26,9 @@
                             <label for="remember-me" class="label-agree-term"><span><span></span></span>مرا
                                 به خاطر بسپار</label>
                         </div>
+                        <div class="form-group">
+                            <div class="g-recaptcha" data-sitekey="6Ldx6w0pAAAAAOEzCLgVKjkrXHkDgIrgzEX719KO"></div>
+                        </div>
                         <div class="form-group form-button">
                             <button type="submit" name="signin" id="signin" class="form-submit" value="">ورود</button>
                         </div>
